objects/DMAPP__New_Coach_Rules__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Long_Name__c</fullName>
        <label>Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Observation__c</fullName>
        <label>Observation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IDEAL</fullName>
                </value>
                <value>
                    <fullName>GOOD SIGN</fullName>
                </value>
                <value>
                    <fullName>BAD SIGN</fullName>
                </value>
                <value>
                    <fullName>HIGH RISK</fullName>
                </value>
                <value>
                    <fullName>URGENT</fullName>
                </value>
                <value>
                    <fullName>PRIORITY</fullName>
                </value>
                <value>
                    <fullName>CONTINUE</fullName>
                </value>
                <value>
                    <fullName>LOW PRIORITY</fullName>
                </value>
                <value>
                    <fullName>IN QUESTION</fullName>
                </value>
                <value>
                    <fullName>POWERFUL</fullName>
                </value>
                <value>
                    <fullName>BYSTANDER</fullName>
                </value>
                <value>
                    <fullName>LAGGARD</fullName>
                </value>
                <value>
                    <fullName>CONSERVATIVE</fullName>
                </value>
                <value>
                    <fullName>INNOVATOR</fullName>
                </value>
                <value>
                    <fullName>VISIONARY</fullName>
                </value>
                <value>
                    <fullName>PRAGMATIST</fullName>
                </value>
                <value>
                    <fullName>NEUTRALIZE</fullName>
                </value>
                <value>
                    <fullName>MOTIVATE</fullName>
                </value>
                <value>
                    <fullName>LEVERAGE</fullName>
                </value>
                <value>
                    <fullName>INFLUENTIAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rule_Advice__c</fullName>
        <label>Rule Advice</label>
        <length>8096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__Rule_Group__c</fullName>
        <label>Rule Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Political Map Contact</fullName>
                </value>
                <value>
                    <fullName>Political Map</fullName>
                </value>
                <value>
                    <fullName>Political Map Contact Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Rule__c</fullName>
        <label>Rule</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__test_handle__c</fullName>
        <label>test_handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>New Coach Rules</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coach Rules Two Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Coach Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>